attached_assets/Pasted-Failed-to-compile-SyntaxError-home-runner-workspace-src-Containers-Admin-AdminPanel-js-Identi-1746227831067.txt
Failed to compile.

SyntaxError: /home/runner/workspace/src/Containers/Admin/AdminPanel.js: Identifier 'showToast' has already been declared. (145:8)
  143 |   const [showMessage, setShowMessage] = useState(false);
  144 |
> 145 |   const showToast = (msg) => {
      |         ^
  146 |     setMessage(msg);
  147 |     setShowMessage(true);
  148 |     setTimeout(() => setShowMessage(false), 3000);
ERROR in ./src/Containers/Admin/AdminPanel.js
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: /home/runner/workspace/src/Containers/Admin/AdminPanel.js: Identifier 'showToast' has already been declared. (145:8)

  143 |   const [showMessage, setShowMessage] = useState(false);
  144 |
> 145 |   const showToast = (msg) => {
      |         ^
  146 |     setMessage(msg);
  147 |     setShowMessage(true);
  148 |     setTimeout(() => setShowMessage(false), 3000);
    at instantiate (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:72:32)
    at constructor (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:359:12)
    at Parser.raise (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:3339:19)
    at FlowScopeHandler.checkRedeclarationInScope (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:3523:19)
    at FlowScopeHandler.declareName (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:3489:12)
    at FlowScopeHandler.declareName (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:3608:11)
    at Parser.declareNameFromIdentifier (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12152:16)
    at Parser.checkIdentifier (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12147:12)
    at Parser.checkLVal (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12073:12)
    at Parser.parseVarId (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:15399:10)

ERROR in [eslint] 
src/Containers/Admin/AdminPanel.js
  Line 145:8:  Parsing error: Identifier 'showToast' has already been declared. (145:8)

webpack compiled with 2 errors
